tests/type-errors/no_builtin_for_aggregate.arl
archetype no_builtin_for_aggregate

variable res : int aggregate = []

entry exec () {
  effect {
    res := [1; 2; 3]
  }
}
